--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     />
   </head>
   <body>
-    <a href="HTML1.html" target="_blank"><h2>HTML</h2></a>
+    <a href="file:///D:/FRONTEND/HTML1.html" target="_blank"><h2>HTML</h2></a>
     <a href="file:///D:/FRONTEND/CSS.html" target="_blank"><h2>CSS</h2></a>
     <a href="file:///D:/FRONTEND/javascript.html" target="_blank"
       ><h2>JAVASCRIPT</h2></a
