--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
     />
   </head>
   <body>
-    <a href="file:///D:/FRONTEND/HTML1.html" target="_blank"><h2>HTML</h2></a>
-    <a href="file:///D:/FRONTEND/CSS.html" target="_blank"><h2>CSS</h2></a>
-    <a href="file:///D:/FRONTEND/javascript.html" target="_blank"
+    <a href="HTML1.html" target="_blank"><h2>HTML</h2></a>
+    <a href="CSS.html" target="_blank"><h2>CSS</h2></a>
+    <a href="javascript.html" target="_blank"
       ><h2>JAVASCRIPT</h2></a
     >
-    <a href="file:///D:/FRONTEND/python.html" target="_blank"
+    <a href="python.html" target="_blank"
       ><h2>PYTHON</h2></a
     >
-    <a href="file:///D:/FRONTEND/java.html" target="_blank"><h2>JAVA</h2></a>
+    <a href="java.html" target="_blank"><h2>JAVA</h2></a>
   </body>
 </html>
